# filest

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  filest.dail
deploy/: filest.env  filest.rc  filestore-api.env  filestore-api.rc  install-freebsd.sh
src/: main.rs
