[package]
name = "filest"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.0"
hyper = { version = "1", features = ["http2"] }
hyper-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tower = { version = "0.5", features = ["util"] }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
rcgen = "0.14"
bytes = "1"
